--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,9 @@
 //=== / Mixin ===
 
 //=== Variables ===
-$font-title: #000000;
-$font-text: #818181;
-$font-white: #ffffff;
+$color-title: #000000;
+$color-text: #818181;
+$color-white: #ffffff;
 //=== / Variables ===
 
 //=== Common ===
@@ -20,7 +20,7 @@ $font-white: #ffffff;
 body {
     @include font-main;
 
-    color: $color-main;
+    color: $color-text;
 }
 
 ul, li, h1, h2, h3, h4, h5, h6, p {
@@ -40,6 +40,82 @@ ul, li, h1, h2, h3, h4, h5, h6, p {
 //=== / Common ===
 
 //=== header ===
+.section-start {
+    padding-top: 20px;
+    padding-bottom: 240px;
+    background: url(../assets/img/header-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 268px;
+        
+        &-nav {
+            ul {
+                display: flex;
+
+                li {
+                    margin-left: 26px;
+                    list-style: none;
+
+                    a {
+                        list-style: none;
+                        text-decoration: none;
+                        color: $color-white;
+                    }
+                }
+            }
+        }
+    }
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-subtitle {
+            font-size: 32px;
+            font-family: "Times New Roman", Times, serif;
+            font-weight: 700;
+            letter-spacing: 0.2px;
+            font-style: italic;
+            color: $color-white;
+            opacity: 0.7;
+        }
+        &-title {
+            margin-bottom: 22px;
+            font-size: 100px;
+            color: $color-white;
+            letter-spacing: 4.5px;
+        }
+        &-btn {
+            display: inline-block;
+            margin-bottom: 40px;
+            padding: 20px 72px;
+            border: 3px solid $color-white;
+            font-size: 18px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            line-height: 1.17em;
+            text-decoration: none;
+            color: $color-white;
+        }
+        &-text {
+            font-size: 14px;
+            font-weight: 700;
+            letter-spacing: 0.6px;
+            color: $color-white;
+
+            a {
+                color: $color-white;
+            }
+        }
+    }
+}
 //=== / header ===
 
 //=== about ===
