--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,41 @@ ul, li, h1, h2, h3, h4, h5, h6, p {
         font-weight: 400;
         letter-spacing: 0.6px;
         text-align: center; }
+
+.section-app {
+  padding-top: 103px;
+  background-color: #f7f7f7; }
+  .section-app-wrapper {
+    display: flex;
+    justify-content: space-between; }
+    .section-app-wrapper__img {
+      position: relative;
+      left: -25px;
+      margin-right: 90px; }
+    .section-app-wrapper__inner-title {
+      position: relative;
+      margin-bottom: 20px;
+      padding-top: 77px;
+      font-size: 18px;
+      font-weight: 700;
+      letter-spacing: 1px;
+      color: #000000; }
+      .section-app-wrapper__inner-title::after {
+        content: "";
+        position: absolute;
+        background: url(../assets/img/underline.png);
+        left: 0;
+        bottom: -7px;
+        width: 88px;
+        height: 1px; }
+    .section-app-wrapper__inner-text {
+      margin-bottom: 29px;
+      font-size: 16px;
+      line-height: 25px;
+      font-weight: 300;
+      letter-spacing: 0.7px; }
+    .section-app-wrapper__inner-footer a {
+      margin-right: 7px;
+      text-decoration: none; }
+      .section-app-wrapper__inner-footer a img {
+        border-radius: 5px; }
