--- a/css/style.css
+++ b/css/style.css
@@ -303,3 +303,27 @@ ul, li, h1, h2, h3, h4, h5, h6, p {
       font-weight: 300;
       letter-spacing: 0.5px;
       text-align: center; }
+
+.section-footer {
+  padding: 38px 0;
+  border-top: 1px solid #e2e2e2;
+  background-color: #f7f7f7; }
+  .section-footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    text-align: center; }
+    .section-footer-wrapper__copy {
+      font-size: 14px;
+      font-weight: 300;
+      color: #8b8b8b;
+      opacity: .5; }
+    .section-footer-wrapper__designed-by {
+      font-size: 14px;
+      font-weight: 300;
+      letter-spacing: 2.7px;
+      color: #8b8b8b; }
+      .section-footer-wrapper__designed-by a {
+        font-weight: 400;
+        color: #000000;
+        letter-spacing: 2.7px;
+        text-decoration: none; }
